review of _section.scss, final

--- a/src/pug/article__item_video.pug
+++ b/src/pug/article__item_video.pug
@@ -4,17 +4,16 @@ block meta
   - var title = 'Страница статьи (с видео)';
 
 block articles__section
-  .section
-    .section__wrapper.section__wrapper_px.mx-0
-      .section__meta
-        nav.pathway
-          a.pathway__link(href="#") Главная
-          a.pathway__link(href="#") Статьи
-          a.pathway__current(href="#") Как самостоятельно заменить тормозную жидкость
-        section.content
-          .color-theme-brand
-            h1 Обзор на летние шины Pirelli P Zero от ДонШина
-          .content__date.mb-2 30 ноября 2021
+  .section.px-lg-0.px-3.mb-5
+    .px-lg-5.px-md-4
+      nav.pathway
+        a.pathway__link(href="#") Главная
+        a.pathway__link(href="#") Статьи
+        a.pathway__current(href="#") Как самостоятельно заменить тормозную жидкость
+      section.content
+        .color-theme-brand
+          h1 Обзор на летние шины Pirelli P Zero от ДонШина
+        .date.mb-2 30 ноября 2021
       .section__video
         .row
           .col-xl-8.col-lg-10.mb-4
