--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -203,25 +203,29 @@ html(lang="ru")
   .slides_togglers-next в category/popular.pug
   _swiper.scss - перебрать
     + _sales
-  _section
+    + _section
     + _common
   _card
   _tabs
   _form - внутренние отступы и стили текста
 
-  _section:
-  include base/callorder.pug
-  include base/subscribe.pug
+    + _section:
+    + include base/callorder.pug
+    + include base/subscribe.pug
 
     + padding
     + px
     + py
     + @include offset()
 
-  service.pug - изменить вёрстку promo
-  избавиться от .content__date и прочих похожих
+    + service.pug - изменить вёрстку promo
+    + избавиться от .content__date и прочих похожих
     + flex-grow: 1 -> flex-grow-1
 
     + вернуть фон кнопки фильтра results-tires.pug в стили
 
   contacts.pug - поправить баг с аккордеоном
+
+  _media:
+  border-radius и box-shadow - найти
+  и другие страницы
