--- a/src/pug/base/subscribe.pug
+++ b/src/pug/base/subscribe.pug
@@ -1,12 +1,12 @@
-.section.text-center
-  .section__wrapper.section__wrapper_px
-    .section__title.color-theme-brand.mb-3 Узнайте о выгоде первым
-    .section__intro Подписывайтесь и получайте новости о скидках и акциях на свою почту.
+.section.text-center.mb-5
+  .px-lg-5.px-md-4.px-3
+    .h2.font-weight-bold.color-theme-brand.mb-3 Узнайте о выгоде первым
+    .h4.mb-4 Подписывайтесь и получайте новости о скидках и акциях на свою почту.
     .row
       form.form.col-xl-4.offset-xl-4.col-md-6.offset-md-3.col-sm-8.offset-sm-2(action="#")
         .form__item.mb-4
           input.form__field(type="text" value="")
           label.form__label.form__label_title e-mail
-        button.btn.text-uppercase.px-5.mb-3(type="submit") подписаться
-        .form__footer Нажимая “Подписаться” вы принимаете условия
+        button.btn.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
+        .h6 Нажимая “Подписаться” вы принимаете условия&nbsp;
           a.color-theme-brand(href="#") Политики конфиденциальности
