--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -407,7 +407,7 @@ block wrapper
                           +img(news__item.img, 'img-cover')
                         .media__meta.flex-grow-1
                           a.media__title.d-block.mb-2(href="#")!= news__item.title
-                          .media__date.date 23.10.2021
+                          .date.px-2 23.10.2021
               .text-center.px-lg-5.px-sm-4
                 a.readmore(href="#") Узнать больше новостей
           .col-lg-3.ml-lg-0.col-md-6.offset-md-3.col-sm-8.offset-sm-2
