--- a/src/pug/sales.pug
+++ b/src/pug/sales.pug
@@ -17,7 +17,7 @@ block wrapper
           span.sale-item__header.d-block.flex-grow-1.mb-3
             +img(sales__item.img,'img-cover')
           span.sale-item__body.px-lg-4.pb-lg-3.px-3.pb-4
-            span.sale-item__date.date До 30 ноября
+            span.date До 30 ноября
             span.sale-item__title.d-block.h2.font-weight-bold!= sales__item.title
 
     include base/subscribe.pug
