--- a/src/scss/base/_mixes.scss
+++ b/src/scss/base/_mixes.scss
@@ -42,6 +42,10 @@
   border-radius: .5rem;
 }
 
+.box-shadow {
+  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
+}
+
 .pointer-events-none {
   pointer-events: none !important;
 }
