--- a/src/pug/articles__row.pug
+++ b/src/pug/articles__row.pug
@@ -35,7 +35,7 @@ block wrapper
             a.media__picture.mb-4.mb-md-0(href="#")
               +img(articles__item.img, 'img-cover')
             .media__meta.flex-grow-1
-              .media__date!= articles__item.date
+              .date.px-2!= articles__item.date
               a.media__title.d-block.font-weight-bold.mb-3(href="#")!= articles__item.title
               .media__intro.h5!= articles__item.intro
     .section.text-center.py-3.mb-5
