--- a/src/pug/base/callorder.pug
+++ b/src/pug/base/callorder.pug
@@ -1,6 +1,6 @@
-.section.text-center
-  .section__wrapper.section__wrapper_px
-    .section__title.color-theme-brand Оставьте заявку и наши менеджеры свяжутся с вами в
+.section.text-center.mb-5
+  .px-lg-5.px-md-4.px-3
+    .h2.font-weight-bold.color-theme-brand.mb-4 Оставьте заявку и наши менеджеры свяжутся с вами в
       br
       | ближайшее время
     .row
@@ -9,5 +9,5 @@
           input.form__field(type="text" value="")
           label.form__label.form__label_title +7 (_ _ _) _ _ _-_ _-_ _
         button.btn.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
-        .form__footer Нажимая “Подписаться” вы принимаете условия
+        .h6 Нажимая “Подписаться” вы принимаете условия&nbsp;
           a.color-theme-brand(href="#") Политики конфиденциальности
