--- a/src/pug/personal-booking.pug
+++ b/src/pug/personal-booking.pug
@@ -4,51 +4,47 @@ block meta
   - var title = 'Текущие записи';
 
 block personal
-  .section
-    .section__title.text-center Текущие записи
-    .section__wrapper.pb-0
-      .section__body
-        .h3.font-weight-bold.mb-3.color-theme-brand Вы записаны на шиномонтаж
-        .desclist
-          .d-flex.align-items-center.mb-1
-            .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Номер записи:
-            .h3.font-weight-bold.col-xl-10.col-sm-9 49409
-          .d-flex.align-items-center.mb-1
-            .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Адрес:
-            .h5.col-xl-10.col-sm-9 ул. Доватора, 11
-          .d-flex.align-items-center.mb-1
-            .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Дата:
-            .h5.col-xl-10.col-sm-9 10 января 2021 г.
-          .d-flex.align-items-center.mb-1
-            .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Время:
-            .h5.col-xl-10.col-sm-9 11 : 00
-      .section__footer
-        .row
-          .contacts.d-flex.align-items-center.justify-content-lg-between.flex-wrap.col-xl-7
-            a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-sm-0(href="#")
-              +icon('tg','contacts__icon color-theme-brand mr-2')
-              span.contacts__item-title Напомнить в Telegram
-            a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-sm-0(href="#")
-              +icon('wapp','contacts__icon color-theme-brand mr-2')
-              span.contacts__item-title Напомнить в WhatsApp
-          .col-xl-5.d-flex.justify-content-xl-end
-            button.btn.btn_nobg.h5.p-0(type="button")
-              svg.btn__icon.color-theme-brand.mr-2
-                use(xlink:href="#icon-trash")
-              | Отменить запись
-  .section
-    .section__wrapper.pt-2.pb-3.pb-sm-2
-      .section__body.border-0.pb-0.mb-0
-        .row.align-items-center
-          .col-xl-8.col-sm-6
-            button.btn.btn_nobg.h5.p-0(type="button")
-              svg.btn__icon.color-theme-brand.mr-2
-                use(xlink:href="#icon-tool")
-              | Записаться на услугу
-          .col-xl-4.col-sm-6
-            .form__select
-              select.form__select-options
-                option Выберете услугу
-                option Услуга 1
-                option Услуга 2
-                option Услуга 3
+  .h2.font-weight-bold.text-center.mb-4 #{title}
+  .section.pb-0.mb-5
+    .border-bottom.px-lg-5.px-md-4.px-3.pb-md-4.pb-3.mb-3
+      .h3.font-weight-bold.color-theme-brand.mb-3 Вы записаны на шиномонтаж
+      .desclist
+        .d-flex.align-items-center.mb-1
+          .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Номер записи:
+          .h3.font-weight-bold.col-xl-10.col-sm-9 49409
+        .d-flex.align-items-center.mb-1
+          .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Адрес:
+          .h5.col-xl-10.col-sm-9 ул. Доватора, 11
+        .d-flex.align-items-center.mb-1
+          .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Дата:
+          .h5.col-xl-10.col-sm-9 10 января 2021 г.
+        .d-flex.align-items-center.mb-1
+          .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Время:
+          .h5.col-xl-10.col-sm-9 11 : 00
+    .px-lg-5.px-md-4.px-3.pb-3
+      .row
+        .contacts.d-flex.align-items-center.justify-content-lg-between.flex-wrap.col-xl-7
+          a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-4.mr-lg-0.mb-2.mb-sm-0(href="#")
+            +icon('tg','contacts__icon color-theme-brand mr-2')
+            span.contacts__item-title Напомнить в Telegram
+          a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-sm-0(href="#")
+            +icon('wapp','contacts__icon color-theme-brand mr-2')
+            span.contacts__item-title Напомнить в WhatsApp
+        .col-xl-5.d-flex.justify-content-xl-end
+          button.btn.btn_nobg.h5.p-0(type="button")
+            +icon('trash','btn__icon color-theme-brand mr-2')
+            | Отменить запись
+
+  form.section.px-lg-5.px-md-4.px-3.pt-2.pb-3.pb-sm-2.mb-5(action="#")
+    .row.align-items-center
+      .col-xl-8.col-sm-6
+        button.btn.btn_nobg.h5.p-0(type="button")
+          +icon('tool','btn__icon color-theme-brand mr-2')
+          | Записаться на услугу
+      .col-xl-4.col-sm-6
+        .form__select
+          select.form__select-options
+            option Выберете услугу
+            option Услуга 1
+            option Услуга 2
+            option Услуга 3
