--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -4,33 +4,32 @@ block meta
   - var title = 'Данные пользователя';
 
 block personal
-  .section
-    .section__title.text-center #{title}
-    .section__wrapper.pt-0.pb-3
-      form.form(action="#")
-        .form__header.form__header_px.form__header_py.mb-4
-          .form__title.h3.font-weight-bold.color-theme-brand Подробно заполненные персональные данные сделают работу с сайтом удобнее и быстрее:
-        .form__section.form__section_content.form__section_px.pb-0.mb-3
-          .row
-            .col-md-5
-              .form__item.active.mb-4
-                input.form__field(type="text" value="Сергей")
-                .form__label.form__label_title Имя
-              .form__item.active.mb-4
-                input.form__field(type="text" value="+7 (989) 726-18-85")
-                .form__label.form__label_title Телефон
-              .form__item.active.mb-4
-                input.form__field(type="text" value="glumglam@gmail.com")
-                .form__label.form__label_title e-mail
-            .col-md-5.offset-md-2
-              .form__item.active.mb-4
-                input.form__field(type="text" value="г. Ростов-на-Дону")
-                .form__label.form__label_title Город / населённый пункт
-              .form__item.active.mb-4
-                input.form__field(type="text" value="пр. Королева")
-                .form__label.form__label_title Улица
-              .form__item.active.mb-4
-                input.form__field(type="text" value="21")
-                .form__label.form__label_title Дом
-        .form__footer.form__footer_px.d-flex.justify-content-md-end.justify-content-center
-          button.btn.text-uppercase.px-sm-5.px-3(type="submit") сохранить изменения
+  .h2.font-weight-bold.text-center.mb-4 #{title}
+  form.section.pb-0.mb-5(action="#")
+    .border-bottom.px-lg-5.px-md-4.px-3.pb-md-4.pb-3.mb-4
+      .h3.font-weight-bold.color-theme-brand Подробно заполненные персональные данные сделают работу с сайтом удобнее и быстрее:
+    .border-bottom.px-lg-5.px-md-4.px-3.mb-3
+      .row
+        .col-md-5
+          .form__item.active.mb-4
+            input.form__field(type="text" value="Сергей")
+            .form__label.form__label_title Имя
+          .form__item.active.mb-4
+            input.form__field(type="text" value="+7 (989) 726-18-85")
+            .form__label.form__label_title Телефон
+          .form__item.active.mb-4
+            input.form__field(type="text" value="glumglam@gmail.com")
+            .form__label.form__label_title e-mail
+        .col-md-5.offset-md-2
+          .form__item.active.mb-4
+            input.form__field(type="text" value="г. Ростов-на-Дону")
+            .form__label.form__label_title Город / населённый пункт
+          .form__item.active.mb-4
+            input.form__field(type="text" value="пр. Королева")
+            .form__label.form__label_title Улица
+          .form__item.active.mb-4
+            input.form__field(type="text" value="21")
+            .form__label.form__label_title Дом
+    .px-lg-5.px-md-4.px-3.pb-3
+      .d-flex.justify-content-md-end.justify-content-center
+        button.btn.text-uppercase.px-sm-5.px-3(type="submit") сохранить изменения
