--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -4,17 +4,16 @@ block meta
   - var title = 'Подбор по VIN-коду';
 
 block personal
-  .section
-    .section__title.text-center #{title}
-    .section__wrapper.pb-0
-      .section__body.pb-0
-        .h3.font-weight-bold.mb-3.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
-        a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
-        a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
-        a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
-      .section__footer
-        .row.align-items-center
-          .col-xl-7
-            .h6.color-theme-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
-          .col-xl-5.d-flex.justify-content-xl-end
-            button.btn.text-uppercase(type="button") Оформить заказ
+  .h2.font-weight-bold.text-center.mb-4 #{title}
+  .section.pb-0.mb-5
+    .border-bottom.px-lg-5.px-md-4.px-3.pb-md-4.pb-3.mb-3
+      .h3.font-weight-bold.mb-3.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
+      a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+      a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+      a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+    .px-lg-5.px-md-4.px-3.pb-3
+      .row.align-items-center
+        .col-xl-7
+          .h6.color-theme-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
+        .col-xl-5.d-flex.justify-content-xl-end
+          button.btn.text-uppercase(type="button") Оформить заказ
