--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/tabs';
 @import 'tpl/form';
 @import 'tpl/card';
+@import 'tpl/promo';
 @import 'tpl/brand';
 @import 'tpl/media';
 @import 'tpl/sales';
