--- a/src/pug/libs/mixins.pug
+++ b/src/pug/libs/mixins.pug
@@ -1,9 +1,15 @@
 mixin img(img__path, img__classname="img-fluid")
   img(class=img__classname src=`/img/${img__path}` alt=""  title="")
 
-mixin icon(icon__name, icon__classname="icon-fluid")
+//- mixin icon(icon__name, icon__classname="icon-fluid")
   svg(class=icon__classname)
     use(xlink:href=`/img/icons/icons.svg#icon-${icon__name}`)
+
+mixin icon(icon__name, icon__classname)
+  if (icon__classname)
+    span(class=`${icon__classname} ds-icon-${icon__name}`)
+  else
+    span(class=`ds-icon-${icon__name}`)
 
 mixin radio(radio__index=1, radio__title, radio__checked, radio__name="filter-radio", radio__labelclassmod)
   input.form__toggler.form__toggler_radio(id=`filter-radio-${radio__index}` name=radio__name type="radio" value="" checked=radio__checked)
